tests/ui/hygiene/privacy-early.stderr
error[E0364]: `f` is private, and cannot be re-exported
  --> $DIR/privacy-early.rs:10:13
   |
LL |         use f as g;
   |             ^^^^^^
...
LL |     foo::m!();
   |     --------- in this macro invocation
   |
note: consider marking `f` as `pub` in the imported module
  --> $DIR/privacy-early.rs:10:13
   |
LL |         use f as g;
   |             ^^^^^^
...
LL |     foo::m!();
   |     --------- in this macro invocation
   = note: this error originates in the macro `foo::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0364`.
